apps/kubewall/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubewall-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: kubewall-tls
      hosts:
        - kubewall.omni.cedille.club
  rules:
    - host: kubewall.omni.cedille.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kubewall-svc
                port:
                  number: 7080
